--- a/todo/templates/todo/layout.html
+++ b/todo/templates/todo/layout.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Tasks</title>
+	<link rel="stylesheet" href="{% static 'todo/styles.css' %}">
 </head>
 <body>
 	{% block body %}
